Fix navigation issue on mobile

--- a/themes/custom/bootstrap_unimelb/scss/bootstrap_unimelb.scss
+++ b/themes/custom/bootstrap_unimelb/scss/bootstrap_unimelb.scss
@@ -71,6 +71,12 @@ body.logo #g-global-menu-logo {
   }
 }
 
+/* Start search box */
+.nav-collapse input.search-query.span2.form-text {
+	width: 95%;
+}
+
+/* End search box */
 
 /* Start video responsive */
 .video-container {
